<resources>
    <string name="app_name">CodePath Full Stack</string>
    <string name="action_settings">Settings</string>
    <string name="action_simple">Simple</string>
    <string name="title_activity_simple">SimpleActivity</string>
    <string name="title_activity_animator_set">AnimatorSetActivity</string>
    <string name="action_animator_set">Set</string>
    <string name="title_activity_view_property_animator">ViewPropertyAnimatorActivity</string>
    <string name="action_view_property_animator">View Property Animator</string>
    <string name="title_activity_using_xml">usingXmlActivity</string>
    <string name="action_using_xml">Using Xml</string>
    <string name="title_activity_value_animaor">ValueAnimaorActivity</string>
    <string name="action_value_animator">Value Animator</string>
    <string name="title_activity_view_animator">ViewAnimatorActivity</string>
    <string name="action_view_animator">View Animator</string>
    <string name="action_activity_transition">Activity Transition</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="action_fragment_transition">Fragment Transitions</string>
    <string name="title_activity_fragment_transition">FragmentTransitionActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">First</string>
    <string name="hello_blank_fragment2">Second</string>
    <string name="title_activity_layout_animation">LayoutAnimationActivity</string>
    <string name="action_layout_animation">Layout Animation</string>
    <string name="action_add">Add</string>
</resources>
