<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.aaron.codepathfullstack.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_simple"
        android:title="@string/action_simple"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_animator_set"
        android:title="@string/action_animator_set"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_view_property_animator"
        android:title="@string/action_view_property_animator"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_using_xml"
        android:title="@string/action_using_xml"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_value_animator"
        android:title="@string/action_value_animator"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_view_animator"
        android:title="@string/action_view_animator"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_activity_transition"
        android:title="@string/action_activity_transition"
        app:showAsAction="never"/>
</menu>
